--- a/src/pages/[routeWithoutLocale].astro
+++ b/src/pages/[routeWithoutLocale].astro
@@ -1,17 +1,5 @@
+<--legacy-peer-deps dummy page -->
 ---
-import { redirectTo404 } from "scripts-ssr/utils";
-import parser from "accept-language-parser";
-import { Locales } from "../locales";
-
-const routes = ["about", "contact", "blog"];
-const route = Astro.params.routeWithoutLocale;
-if (!routes.includes(route!))
-    return redirectTo404(Astro.url, Astro.request.headers);
-
-const acceptLanguages = Astro.request.headers.get("Accept-Language");
-if (!acceptLanguages) return Astro.redirect(`/en/${route}`, 302);
-
-const lang = parser.pick(Locales, acceptLanguages) || "en";
-
-return Astro.redirect(`/${lang}/${route}`, 302);
+export function getStaticPaths() { return []; }
+export const prerender = true;
 ---
